# cotc

collector/: main.py  metrics.py  pyproject.toml
collector/config/: __init__.py  config.json  config.py
collector/sdk/: __init__.py
collector/util/: __init__.py
cotc-common/: pyproject.toml
cotc-common/src/cotc_common/metrics/: __init__.py  _metrics.py  _types.py
web-app/: app.py  pyproject.toml
web-app/application/: db.py  main.py  models.py
web-app/application/common/: __init__.py  console_io.py  util.py
web-app/application/config/: config.json  logging_config.py
web-app/application/templates/: history.html  latest.html
web-app/instance/: db.sqlite3
