[project]
name = "collector"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "prettyprint>=0.1.5",
    "psutil>=7.0.0",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "types-psutil>=7.0.0.20250218",
    "types-requests>=2.32.0.20241016",
]
